# rbpodo

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  python-tutorial.ipynb
.github/workflows/: build-and-test.yml  release.yml
cmake/: rbpodo-config.cmake.in
docs/: api_reference.md  cobot.md  cobot_data.md  getting_started.md  installation.md  notes.md  other_types.md  overview.md  python_binding.md  response.md
examples/: CMakeLists.txt  async.py  basic.cpp  basic.py  calc_fk_tcp.py  data_channel.cpp  data_channel.py  error_code.cpp  error_code.py  get_control_box_info.cpp  get_control_box_info.py  get_info.cpp  get_info.py  get_system_variable.cpp  get_system_variable.py  gripper.cpp  gripper.py  move_j.py  move_l_rel.py  move_pb.cpp  move_pb.py  move_servo_j.cpp  move_stop.py  power_onoff.cpp  response_collector.py  robot_state.py  rt_script.cpp  set_configuration.cpp  set_digital_out.cpp  set_multiple_digital_out.py  set_operation_mode.cpp  set_operation_mode.py  set_tcp_info.cpp  set_user_coordinate.py  task.py  task_load.cpp  trapezoidalBlendProfile_fix2.cpp
examples/eigen/: CMakeLists.txt  data_channel_eigen.cpp  test_feedback_eigen.cpp
include/rbpodo/: cobot.hpp  cobot_data.hpp  common.hpp  data_type.hpp  error_code.hpp  rbpodo.hpp  socket.hpp
python/: CMakeLists.txt  cobot.hpp  cobot_data.hpp  common.hpp  data_type.cpp  rbpodo.cpp
python/rbpodo/: __init__.py
res/: error_code.csv
src/: CMakeLists.txt  cobot.cpp  cobot_data.cpp  socket.cpp
utils/: convert_ec.py
